Group page initial layout

--- a/hs_core/templates/pages/find-groups.html
+++ b/hs_core/templates/pages/find-groups.html
@@ -34,7 +34,7 @@
 
                     <div class="group-caption">
                         <h3 class="group-name">Viterbi Graduate Student Association (VGSA)</h3>
-                        <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
+                        <small class="text-muted group-keywords">Purpose of the group</small>
 
                         <p class="group-description">We encourage Universities across North America to register in this group with contact
                             details making it easy for everyone to follow to follow.
@@ -129,7 +129,7 @@
                             campus, and is committed to creating a positive student experience at USC.Show less</p>
 
                         <div class="text-center group-thumbnail-footer">
-                            <p><a href="#" class="btn btn-primary" role="button">Ask to join</a></p>
+                            <h4>Request Sent</h4>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
-                        <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
+                        <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
 
                         <p class="group-description">We welcome all levels of human resource professionals who are local
                             to SLC, UT to utilize SLCHRP to take advantage of all LinkedIn has to offer. We invite all
@@ -189,7 +189,7 @@
 
                             <div><small class="text-muted">and 23 others have joined</small></div>
 
-                            <p><a href="#" class="btn btn-primary" role="button">Ask to join</a></p>
+                            <h4>Request Sent</h4>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                     <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
-                        <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
+                        <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
 
                         <p class="group-description">We welcome all levels of human resource professionals who are local
                             to SLC, UT to utilize SLCHRP to take advantage of all LinkedIn has to offer. We invite all
@@ -233,7 +233,7 @@
                     <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
-                        <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
+                        <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
 
                         <p class="group-description">We welcome all levels of human resource professionals who are local
                             to SLC, UT to utilize SLCHRP to take advantage of all LinkedIn has to offer. We invite all
@@ -266,7 +266,7 @@
                     <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">MeExcel - MS Office Help Group</h3>
-                        <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
+                        <small class="text-muted group-keywords">Water Research</small>
 
                         <p class="group-description">The Viterbi Graduate Student Association (VGSA) represents all the
                             full time and part time Master's and Doctoral students in the Viterbi School of Engineering.
