Group page initial layout

--- a/hs_core/templates/pages/find-groups.html
+++ b/hs_core/templates/pages/find-groups.html
@@ -18,6 +18,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h3>Find groups</h3>
+                <hr class="solid">
                 <div class="input-group group-search">
                     <input type="text" class="form-control" placeholder="Search...">
                   <span class="input-group-btn">
@@ -30,7 +31,7 @@
         <div class="row group-thumbnails">
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
 
                     <div class="group-caption">
                         <h3 class="group-name">Viterbi Graduate Student Association (VGSA)</h3>
@@ -64,7 +65,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">MeExcel - MS Office Help Group</h3>
                         <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
@@ -85,7 +86,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
 
                     <div class="group-caption">
                         <h3 class="group-name">Viterbi Graduate Student Association (VGSA)</h3>
@@ -113,10 +114,9 @@
                 </div>
             </div>
 
-
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">MeExcel - MS Office Help Group</h3>
                         <small class="text-muted group-keywords">Hydrology, Environmental Engineering</small>
@@ -137,7 +137,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
                         <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
@@ -163,7 +163,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
 
                     <div class="group-caption">
                         <h3 class="group-name">Viterbi Graduate Student Association (VGSA)</h3>
@@ -197,7 +197,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
                         <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
@@ -230,7 +230,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">Salt Lake City Human Resource Professionals</h3>
                         <small class="text-muted group-keywords">Basic facts about #Infographic #Desiging.</small>
@@ -263,7 +263,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="group-thumbnail contribution">
-                    <div class="group-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
+                    <div class="group-preview-image" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)"></div>
                     <div class="group-caption">
                         <h3 class="group-name">MeExcel - MS Office Help Group</h3>
                         <small class="text-muted group-keywords">Water Research</small>
