--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -14,6 +14,120 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>Highlights</h4>
+
+                <hr class="solid">
+
+                <div class="group-activity-block activity-block height-fix">
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <div class="group-image-extra-small" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
+                        </div>
+
+                        <div class="col-sm-11">
+                            <h4 class="group-title"><a href="#">Web Designer and HTML/CSS Developer</a></h4>
+                        </div>
+
+                        <hr class="solid">
+                    </div>
+
+                    <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                         class="profile-pic-thumbnail round-image pull-left">
+                    </div>
+
+                    <div class="metadata-wrapper">
+                        <div class="shared-resource-info">
+                            <strong><a href="#">Maurier Ramirez</a></strong>
+                            <span class="text-muted"> shared </span>
+                            <span><a href="#">Untitled Resource</a></span>
+                        </div>
+                        <h5><span class="text-muted">Resource type: </span>Generic</h5>
+                        <h5><span class="text-muted">Date: </span>March 14, 2016, 5:14 p.m.</h5>
+                    </div>
+
+                    <div class="activity-description col-sm-12" style="max-height: 50px;">
+                        <p class="description">
+                            <strong>ABSTRACT: </strong></p>
+
+                        <p>The Viterbi Graduate Student Association (VGSA) represents all the full
+                            time and part time Master's and Doctoral students in the Viterbi School
+                            of Engineering. VGSA is the largest student umbrella organization at the
+                            University of Southern California with over 5,000 active engineering
+                            graduate student members each year, and has an even greater Alumni
+                            population. The VGSA promotes professional, academic, and social affairs
+                            on campus, and is committed to creating a positive student experience at
+                            USC.Show less</p>
+                    </div>
+                    <div class="show-more-btn btn-default" title="Show less">···</div>
+
+                    <div class="group-activity-comment">
+                        <fieldset>
+                            <label>Write a comment</label>
+                            <textarea class="form-control"></textarea>
+                        </fieldset>
+                        <a class="btn btn-primary">Post</a>
+                    </div>
+                </div>
+
+                <div class="group-activity-block activity-block height-fix">
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <div class="group-image-extra-small"
+                                 style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)"></div>
+                        </div>
+
+                        <div class="col-sm-11">
+                            <h4 class="group-title"><a href="#">Web Designer and HTML/CSS Developer</a></h4>
+                        </div>
+
+                        <hr class="solid">
+                    </div>
+
+                    <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                         class="profile-pic-thumbnail round-image pull-left">
+                    </div>
+
+                    <div class="metadata-wrapper">
+                        <div class="shared-resource-info">
+                            <strong><a href="#">Maurier Ramirez</a></strong>
+                        </div>
+                        <h5><span class="text-muted">Date: </span>March 14, 2016, 5:14 p.m.</h5>
+                    </div>
+
+                    <div class="activity-description conversation-description col-sm-12" style="max-height: 50px;">
+                        <p class="description">
+
+                        <p>The Viterbi Graduate Student Association (VGSA) represents all the full
+                            time and part time Master's and Doctoral students in the Viterbi School
+                            of Engineering. VGSA is the largest student umbrella organization at the
+                            University of Southern California with over 5,000 active engineering
+                            graduate student members each year, and has an even greater Alumni
+                            population. The VGSA promotes professional, academic, and social affairs
+                            on campus, and is committed to creating a positive student experience at
+                            USC.Show less</p>
+                    </div>
+                    <div class="show-more-btn btn-default" title="Show less">···</div>
+
+
+                    <div class="group-activity-comment">
+                        <fieldset>
+                            <label>Write a comment</label>
+                            <textarea class="form-control"></textarea>
+                        </fieldset>
+                        <a class="btn btn-primary">Post</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="text-center btn-list-more"><a>Show More</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
 
@@ -21,7 +135,25 @@
     <script>
 
         $(document).ready(function () {
+            // Abstract collapse toggle
+            $(".show-more-btn").click(function () {
+                if ($(this).parent().find(".activity-description").css("max-height") == "50px") {
+                    var block = $(this).parent().find(".activity-description");
 
+                    block.css("max-height", "initial"); // Set max-height to initial temporarily.
+                    var maxHeight = block.height();    // Save the max height
+                    block.css("max-height", "50px");    // Restore
+
+                    block.animate({'max-height': maxHeight}, 300); // Animate to max height
+                    $(this).text("▲");
+                    $(this).attr("title", "Show less");
+                }
+                else {
+                    $(this).parent().find(".activity-description").animate({'max-height': "50px"}, 300);
+                    $(this).attr("title", "Show more");
+                    $(this).text("···");
+                }
+            });
         });
     </script>
 {% endblock %}
