Group page initial layout

--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -241,7 +241,22 @@
                                         <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
                                         <span class="text-muted">Front End Web Developer at Utah State University</span>
                                     </td>
-                                    <td>Owner</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button"
+                                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="true">
+                                                Owner
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                                <li><a href="#" class="disabled">Owner</a></li>
+                                                <li><a href="#">Member</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Expell</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -253,7 +268,22 @@
                                         <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
                                         <span class="text-muted">Front End Web Developer at Utah State University</span>
                                     </td>
-                                    <td>Creator</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button"
+                                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="true">
+                                                Member
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                                <li><a href="#" class="disabled">Owner</a></li>
+                                                <li><a href="#">Member</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Expell</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -265,7 +295,22 @@
                                         <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
                                         <span class="text-muted">Front End Web Developer at Utah State University</span>
                                     </td>
-                                    <td>Member</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button"
+                                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="true">
+                                                Member
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                                <li><a href="#" class="disabled">Owner</a></li>
+                                                <li><a href="#">Member</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Expell</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                             </table>
 
@@ -281,7 +326,22 @@
                                         <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
                                         <span class="text-muted">Front End Web Developer at Utah State University</span>
                                     </td>
-                                    <td>Creator</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button"
+                                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="true">
+                                                Owner
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                                <li><a href="#" class="disabled">Owner</a></li>
+                                                <li><a href="#">Member</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Expell</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -293,7 +353,22 @@
                                         <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
                                         <span class="text-muted">Front End Web Developer at Utah State University</span>
                                     </td>
-                                    <td>Owner</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button"
+                                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="true">
+                                                Owner
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                                <li><a href="#" class="disabled">Owner</a></li>
+                                                <li><a href="#">Member</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Expell</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                             </table>
 
