--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -33,7 +33,7 @@
         {% include "resource-landing-page/title-section.html" %}
 
         {# ======= Top-right buttons ======= #}
-        {% include "resource-landing-page/top-right-buttons.html" %}
+        {% include "resource-landing-page/top-right-buttons.html" with show_manage_access=show_manage_access %}
 
         {# ======= Title and header content ======= #}
         {% include "resource-landing-page/resource-header.html" %}
