Minor layout fix

--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -1,5 +1,5 @@
 {#        ======= Top right buttons =======#}
-<div class="col-sm-12">
+<div class="col-sm-12 height-fix">
     <div class="lined-wrapper"></div>
     {% if not metadata_form %}
         <div class="custom-btn-toolbar">
