[#47] Unspecified goes away when clicked. [#47] Switch to overview tab when editing.

--- a/hs_app_timeseries/templates/pages/timeseriesresource.html
+++ b/hs_app_timeseries/templates/pages/timeseriesresource.html
@@ -119,7 +119,12 @@
                           <hr>
                           <div>
                               <strong><input type="checkbox" name="extract-metadata" value="No" onclick="setCheckboxValue(this)"> Check to extract metadata from this uploaded file</strong>
-                              <h3 style="color:red">If metadata is extracted, existing metadata will be replaced with the extracted ones.</h3>
+                              <br><br>
+
+                              <div class="alert alert-warning" role="alert">
+                                  <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                                  If metadata is extracted, existing metadata will be replaced with the extracted ones.
+                              </div>
                           </div>
                   </div>
                   <div class="modal-footer">
