--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -28,7 +28,7 @@
                         </div>
 
                         <div class="col-sm-11">
-                            <h4 class="group-title"><a href="#">Web Designer and HTML/CSS Developer</a></h4>
+                            <h4 class="group-title"><a href="/Group">Web Designer and HTML/CSS Developer</a></h4>
                         </div>
 
                         <hr class="solid">
@@ -80,7 +80,7 @@
                         </div>
 
                         <div class="col-sm-11">
-                            <h4 class="group-title"><a href="#">Web Designer and HTML/CSS Developer</a></h4>
+                            <h4 class="group-title"><a href="/Group">Web Designer and HTML/CSS Developer</a></h4>
                         </div>
 
                         <hr class="solid">
