--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -307,7 +307,7 @@
         $(document).ready(function() {
             // disable "Publish" btn
             $("#publish").hide();
-            $("#new-version").hide();
+{#            $("#new-version").hide();#}
 
             //------------------ table headers ------------
             {#                <th>Add</th>             0  #}
