--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -151,9 +151,9 @@
 {% block extra_js %}
 
     <!--<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>-->
-    <script src="http://maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
-    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
-    <script src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
+    <script src="//maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
+    <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
+    <script src="//googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
     <script type="text/javascript">
         var minFloatingNumber = 0.0001;
         var map = null;
@@ -230,7 +230,7 @@
             var latlng = new google.maps.LatLng(lat, lng);
             var marker = new google.maps.Marker({
                 map: map,
-                icon: 'http://maps.google.com/intl/en_us/mapfiles/ms/micons/red-dot.png',
+                icon: '//maps.google.com/intl/en_us/mapfiles/ms/micons/red-dot.png',
                 position: latlng
             });
             markers.push(marker);
@@ -253,7 +253,7 @@
             var latlng = new google.maps.LatLng(lat, lng);
             var marker = new google.maps.Marker({
                 map: map,
-                icon: 'http://maps.google.com/mapfiles/dd-end.png',
+                icon: '//maps.google.com/mapfiles/dd-end.png',
                 position: latlng
             });
             markers.push(marker);
