--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -150,7 +150,6 @@
 
 {% block extra_js %}
 
-    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>-->
     <script src="//maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
     <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
     <script src="//googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
@@ -283,7 +282,6 @@
                 if (lat_diff < minFloatingNumber && lng_diff < minFloatingNumber) {
                     item.title = item.title + "<br />" + test.title;
                     item.info_link += '<br />' + '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
-                    //console.log("point: " + item.title);
                     existed = true;
                 }
             });
@@ -307,9 +305,7 @@
                 if (lat_diff < minFloatingNumber && lng_diff < minFloatingNumber) {
                     item.title = item.title + "<br />" + test.title;
                     item.info_link += '<br />' + '"<a href="' + test.get_absolute_url + '">' + test.title + '</a>';
-                    //console.log("box: " + item.title);
                     existed = true;
-                    //return;
                 }
             });
             if (!existed){
@@ -345,9 +341,7 @@
             map = null;
             window.location = requestURL;
             var checkboxId =  key + "-" + value;
-            //console.log(checkboxId);
             localStorage[checkboxId] = true;
-            //$(checkboxId).prop('checked', true);
         }
 
         var clearAllFaceted = function() {
@@ -357,19 +351,8 @@
             window.location = clearURL;
         }
 
+
         $(document).ready(function () {
-
-            //$('ul#list-group-author li').each(function(i) {
-            //    console.log($(this).attr("rel"));
-            //});
-            $(".faceted-selections").each(function () {
-                //var val = localStorage[$(this).attr("id")];
-                //var isChecked = val !== undefined ? val == "true" : false;
-                //$(this).prop("checked", isChecked);
-                var val = $(this).attr("id");
-                console.log(val);
-            });
-
             if($("#id_q").val() == ""){
                 clearAllFaceted();
                 $("#id_q").val("*");
@@ -388,18 +371,16 @@
                         url: requestURL,
                         dataType: 'json',
                         success: function(data) {
-                            console.log("success");
                             var json_results = [];
                             for(var j = 0; j < data.length; j++){
                                 var item = $.parseJSON(data[j]);
                                 json_results.push(item);
                             }
-                            console.log(json_results);
                             initMap(json_results);
 
                         }
                         , failure: function(data){
-                            console.log("fail");
+                            console.error("fail");
                         }
                     });
                 }
@@ -428,9 +409,7 @@
                     $("#search-field").submit();
                 }
             });
-            /**
-             * temporarily keep the following functions for checkboxes
-             */
+
             $(".faceted-selections").click(function () {
                 var tokens = $(this).val().split(",");
                 var key = tokens[0];
@@ -444,7 +423,6 @@
                     requestURL = requestURL + "&selected_facets="+key+"_exact:"+value
                     $(".faceted-selections").each(function () {
                         var val = localStorage[$(this).attr("id")];
-                        //var isChecked = val !== undefined ? val == "true" : false;
                         var isChecked = val === 'true';
                         if(isChecked){
                             var arr = $(this).val().split(",");
@@ -461,7 +439,6 @@
                     var updateURL = "/search/?q=" + textSearch;
                     $(".faceted-selections").each(function () {
                         var val = localStorage[$(this).attr("id")];
-                        //var isChecked = val !== undefined ? val == "true" : false;
                         var isChecked = val === 'true';
                         if(isChecked){
                             var arr = $(this).val().split(",");
