--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -306,7 +306,7 @@
         var page_length_change = false;
         $(document).ready(function() {
             // disable "Publish" btn
-            $("#publish").hide();
+{#            $("#publish").hide();#}
 {#            $("#new-version").hide();#}
 
             //------------------ table headers ------------
