--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -104,26 +104,30 @@
                 <div class="tab-content">
                     <div id="list-view" class="tab-pane fade in active">
                         <table class="table table-striped table-hover" id="items-discovered">
-                            <tr>
-                                <th>Title</th>
-                                <th>Type</th>
-                                <th>First Author</th>
-                                <th>Last Modified</th>
-                            </tr>
-                            {% for result in page_obj.object_list %}
+                            <thead>
                                 <tr>
-                                    <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
-                                    <td>{{ result.object|resource_type }}</td>
-                                    {% if result.object.first_creator.description %}
-                                        <td><a href="{{ result.object.first_creator.description }}">{{ result.object.first_creator.name  }}</a></td>
-                                    {% else %}
-                                        <td>{{ result.object.first_creator.name }}</td>
-                                    {% endif %}
-                                    <td>{{ result.object.updated|date }} {{ result.object.updated|time }}</td>
+                                    <th>Title</th>
+                                    <th>Type</th>
+                                    <th>First Author</th>
+                                    <th>Last Modified</th>
                                 </tr>
-                            {% empty %}
-                                <p>No results found.</p>
-                            {% endfor %}
+                            </thead>
+                            <tbody>
+                                {% for result in page_obj.object_list %}
+                                    <tr>
+                                        <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
+                                        <td>{{ result.object|resource_type }}</td>
+                                        {% if result.object.first_creator.description %}
+                                            <td><a href="{{ result.object.first_creator.description }}">{{ result.object.first_creator.name  }}</a></td>
+                                        {% else %}
+                                            <td>{{ result.object.first_creator.name }}</td>
+                                        {% endif %}
+                                        <td>{{ result.object.updated|date }} {{ result.object.updated|time }}</td>
+                                    </tr>
+                                {% empty %}
+                                    <p>No results found.</p>
+                                {% endfor %}
+                            </tbody>
                         </table>
                         {% if page_obj.has_previous or page_obj.has_next %}
                             <div style="float: right">
@@ -149,7 +153,8 @@
 {% endblock %}
 
 {% block extra_js %}
-
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
+    <script type="text/javascript" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
     <script src="//maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
     <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
     <script src="//googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
@@ -361,6 +366,13 @@
                 var requestURL =  windowPath + searchURL;
                 window.location = requestURL;
             }
+
+             $('#items-discovered').DataTable({
+                 "paging":   false,
+                 "searching": false,
+                 "order": [[ 0, "desc" ]]
+             });
+
             $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
                 var tabId = $(e.target).attr("href").substr(1);
                 window.location.hash = tabId;
