Moved manage access modal dialog to modals.html Simplified conditional blocks to avoid repeated code.

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1236,7 +1236,7 @@ a[data-toggle='tab']{
 	border-bottom-left-radius: 0;
 }
 
-#permission-panel #id_user-autocomplete {
+#add-access-form #id_user-autocomplete {
     width: 100%;
     height: 100%;
     border: 0;
